--- a/index.html
+++ b/index.html
@@ -134,10 +134,9 @@
             <section class="about-section" id="about">
                 <h2 class="section__title">A propos de moi</h2>
                 <span class="section__subtitle">Mon introduction</span>
-
                 <div class="about__container container grid">
                     <div class="about__data">
-                        <p class="about__description">Je souhaite devenir quelqu'un qui contribue à la société, qui influence la vie de nombreuses personnes et qui soit présent pour ceux dont je suis proche.
+                        <p class="about__description">Je souhaite devenir quelqu'un qui contribue à la société, qui influence la vie de nombreuses personnes et qui soit présent pour ceux dont je suis proche.<br><br>
                         D'une certaine manière, je travaille déjà à la réalisation de cet objectif idéaliste. J'aime à penser que les nombreuses relations que j'ai nouées au cours des 19 années de ma vie m'ont permis d'apprendre des autres autant que les autres ont appris de moi. Beaucoup m'ont connu comme quelqu'un d'amical, de fiable et de responsable
                         </p>
                         <br>
@@ -154,7 +153,7 @@
                         </div>
 
                         <div class="about__buttons">
-                            <a download="" href="/assets/pdf/Alexa-Cv.pdf" class="button button--flex">
+                            <a download="" href="/assets/pdf/CV Kalvin Belony--Sagbo .pdf" class="button button--flex">
                                 Télécharger mon CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
@@ -176,7 +175,6 @@
 
                                 <div>
                                     <h1 class="skills__title">Front-end développement</h1>
-                                    <span class="skills___subtitle">More than 4 years</span>
                                 </div>
 
                                 <i class="uil uil-angle-down skills__arrows"></i>
@@ -215,7 +213,6 @@
 
                                 <div>
                                     <h1 class="skills__title">Back-end développement</h1>
-                                    <span class="skills___subtitle">More than 4 years</span>
                                 </div>
 
                                 <i class="uil uil-angle-down skills__arrows"></i>
@@ -253,7 +250,6 @@
 
                                 <div>
                                     <h1 class="skills__title">Design</h1>
-                                    <span class="skills___subtitle">More than 4 years</span>
                                 </div>
 
                                 <i class="uil uil-angle-down skills__arrows"></i>
@@ -323,6 +319,23 @@
                                 </div>
 
                                 <div>
+                                    <h3 class="qualification__title">Piscine 42</h3>
+                                    <span class="qualification__subtitle">Université Paris-Est-Créteil</span>
+                                    <div class="qualification__calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        Août 2021
+                                    </div>
+                                </div>
+                            </div>
+                            <!--==================== QUALIFICATION 2 ====================-->
+                            <div class="qualification__data">
+
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                    <span class="qualification__line"></span>
+                                </div>
+
+                                <div>
                                     <h3 class="qualification__title">Licence informatique</h3>
                                     <span class="qualification__subtitle">Université Paris-Est-Créteil</span>
                                     <div class="qualification__calendar">
@@ -363,7 +376,7 @@
                     <div class="services__content">
                         <div>
                             <i class="uil uil-web-grid services__icon"></i>
-                            <h3 class="services__title">Ui/Ux</h3>
+                            <h3 class="services__title">Ui / Ux</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
@@ -379,19 +392,19 @@
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>I develop the user interface.</p>
+                                        <p>Identifier les principaux enjeux de l'application</p>
                                     </li><br>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>Web page development.</p>
+                                        <p>Création de wireframe</p>
                                     </li><br>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>I create ux element interactions.</p>
+                                        <p>Élaboration des profil des utilisateurs</p>
                                     </li><br>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>I position your company brand.</p>
+                                        <p>Adaptation en maquette via Figma</p>
                                     </li>
                                 </ul>
                             </div>
