testing ajust font

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive Portfolio Website</title>
+        <title>Kalvin Belony--Sagbo</title>
     </head>
-    <body>
+    <body style="font: 'Product Sans', sans-serif;">
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
