testing ajust font 2

--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
         
         <!--==================== SWIPER CSS ====================-->
-        <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
+        <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
         
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>Kalvin Belony--Sagbo</title>
     </head>
-    <body style="font: 'Product Sans', sans-serif;">
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
             <nav class="nav container">
@@ -536,7 +535,7 @@
                     <div class="swiper-wrapper">
                         <!--==================== PORTFOLIO 1 ====================-->
                         <div class="portofolio__content grid swiper-slide">
-                            <img src="/assets/img/Capture d’écran, le 2021-12-08 à 21.56.35.png" alt="" class="portofolio__img">
+                            <img src="assets/img/Capture d’écran, le 2021-12-08 à 21.56.35.png" alt="" class="portofolio__img">
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Vivo-Green</h3>
