--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html lang="en">
+    <html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -535,7 +535,7 @@
                     <div class="swiper-wrapper">
                         <!--==================== PORTFOLIO 1 ====================-->
                         <div class="portofolio__content grid swiper-slide">
-                            <img src="assets/img/Capture d’écran, le 2021-12-08 à 21.56.35.png" alt="" class="portofolio__img">
+                            <img src="assets/img/Vivo-green.png" alt="" class="portofolio__img">
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Vivo-Green</h3>
@@ -549,7 +549,7 @@
 
                         <!--==================== PORTFOLIO 2 ====================-->
                         <div class="portofolio__content grid swiper-slide">
-                            <img src="/assets/img/Capture d’écran, le 2022-01-09 à 21.06.14.png" alt="" class="portofolio__img">
+                            <img src="assets/img/DonkeyStay.png" alt="" class="portofolio__img">
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Vivo-Green</h3>
@@ -563,7 +563,7 @@
 
                         <!--==================== PORTFOLIO 3 ====================-->
                         <div class="portofolio__content grid swiper-slide">
-                            <img src="/assets/img/Capture d’écran, le 2021-12-08 à 21.55.14.png" alt="" class="portofolio__img">
+                            <img src="assets/img/Pokedex.png" alt="" class="portofolio__img">
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Vivo-Green</h3>
@@ -577,7 +577,7 @@
 
                         <!--==================== PORTFOLIO 4 ====================-->
                         <div class="portofolio__content grid swiper-slide">
-                            <img src="/assets/img/Capture d’écran, le 2022-01-10 à 13.23.57.png" alt="" class="portofolio__img">
+                            <img src="assets/img/Blog.png" alt="" class="portofolio__img">
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Vivo-Green</h3>
@@ -705,7 +705,7 @@
             <i class="uil uil-arrow-up scrollup__icon"></i>
         </a>
         <!--==================== SWIPER JS ====================-->
-        <script src="/assets/js/swiper-bundle.min.js"></script>
+        <script src="assets/js/swiper-bundle.min.js"></script>
 
         <!--==================== MAIN JS ====================-->
         <script src="assets/js/main.js"></script>
