ajust link and text qualification

--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
                         </p>
                         <br>
                         <div class="about__info">
-                            <div>
+                            
+                            <!--<div>
                                 <span class="about__info-title">08+</span>
                                 <span class="about__info-name">Années <br> d'expérience</span>
                             </div>
@@ -149,7 +150,7 @@
                                 <span class="about__info-title">20+</span>
                                 <span class="about__info-name">Projets <br> terminer</span>
                             </div>
-                        </div>
+                        </div>-->
 
                         <div class="about__buttons">
                             <a download="" href="/assets/pdf/CV Kalvin Belony--Sagbo .pdf" class="button button--flex">
@@ -182,13 +183,13 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">HTML</h3>
+                                        <h3 class="skills__name">HTML 5</h3>
                                     </div>
                                 </div><br>
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">CSS</h3>
+                                        <h3 class="skills__name">CSS 3</h3>
                                     </div>
                                 </div><br>
 
@@ -220,7 +221,7 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">PHP / POO</h3>
+                                        <h3 class="skills__name">PHP 8 / POO</h3>
                                     </div><br>
                                 </div>
 
@@ -319,7 +320,7 @@
 
                                 <div>
                                     <h3 class="qualification__title">Piscine 42</h3>
-                                    <span class="qualification__subtitle">Université Paris-Est-Créteil</span>
+                                    <span class="qualification__subtitle"> Campus de Paris</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         Août 2021
@@ -528,19 +529,19 @@
 
             <!--==================== PORTFOLIO ====================-->
             <section class="portfolio section" id="portofolio">
-                <h2 class="section__title">Portofolio</h2>
-                <span class="section__subtitle">Most recent</span>
+                <h2 class="section__title">Portfolio</h2>
+                <span class="section__subtitle">Les plus récents</span>
 
                 <div class="portofolio__container container swiper">
                     <div class="swiper-wrapper">
                         <!--==================== PORTFOLIO 1 ====================-->
                         <div class="portofolio__content grid swiper-slide">
-                            <img src="assets/img/Vivo-green.png" alt="" class="portofolio__img">
+                            <img src="assets/img/Vivo-green.png"  alt="" class="portofolio__img">
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Vivo-Green</h3>
                                 <p class="portofolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
-                                <a href="#" class="button button--flex button--small portofolio__button">
+                                <a href="https://www.vivo-green.fr/" class="button button--flex button--small portofolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -606,7 +607,7 @@
 
             <!--==================== CONTACT ME ====================-->
             <section class="contact section" id="contact">
-                <h2 class="section__title">Contact me</h2>
+                <h2 class="section__title">Me contacter</h2>
                 <span class="section__subtitle">Get in touch</span>
 
                 <div class="contact__container container grid">
@@ -616,7 +617,7 @@
 
                             <div>
                                 <h3 class="contact__title">Call me</h3>
-                                <span class="contact__subtitle">+33631906435</span>
+                                <span class="contact__subtitle">+33 631906435</span>
                             </div>
                         </div>
                         <div class="contact__information">
@@ -631,8 +632,8 @@
                             <i class="uil uil-map-marker contact__icon"></i>
 
                             <div>
-                                <h3 class="contact__title">Location</h3>
-                                <span class="contact__subtitle">Région parisienne</span>
+                                <h3 class="contact__title">Localisation</h3>
+                                <span class="contact__subtitle">Paris</span>
                             </div>
                         </div>
                     </div>
@@ -675,21 +676,21 @@
 
                     <ul class="footer__links">
                         <li>
-                            <a href="#services" class="footer__link">Services</a>
+                            <a href="#competences" class="footer__link">Compétences</a>
                         </li>
                         <li>
                             <a href="#services" class="footer__link">Services</a>
                         </li>
                         <li>
-                            <a href="#services" class="footer__link">Services</a>
+                            <a href="#portofolio" class="footer__link">Portfolio</a>
                         </li>
                     </ul>
 
                     <div class="footers__socials">
-                        <a href="" class="footer__social">
+                        <a href="https://www.linkedin.com/in/kalvin-belony-sagbo-16505b222/" class="footer__social">
                             <i class="uil uil-linkedin"></i>
                         </a>
-                        <a href="" class="footer__social">
+                        <a href="https://github.com/Kbelony" class="footer__social">
                             <i class="uil uil-github"></i>
                         </a>
                         <a href="" class="footer__social">
