--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                                     <image class="home__blob-img" href="assets/img/memoji.png"/>
                                 </g>
                             </svg>
-                        </div><br>
+                        </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">👋 Hello, world !</h1><br>
+                            <h1 class="home__title">👋 Hello,world !</h1><br>
                             <h3 class="home__subtitle">Front-end développeur</h3>
                             <p class="home__description">Mon nom est Kalvin. Je suis un développeur junior front-end
                             basé sur Paris. Je suis tombé
@@ -303,7 +303,7 @@
 
                                 <div>
                                     <h3 class="qualification__title">Donkeyschool - Formation Web développement</h3>
-                                    <span class="qualification__subtitle">Lycée Polyvalent Louis Armand</span>
+                                    <span class="qualification__subtitle">Neuilly-Sur-Seine</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
                                         2021 - Maintenant
@@ -530,7 +530,7 @@
             <!--==================== PORTFOLIO ====================-->
             <section class="portfolio section" id="portofolio">
                 <h2 class="section__title">Portfolio</h2>
-                <span class="section__subtitle">Les plus récents</span>
+                <span class="section__subtitle">Mes projets les plus récents</span>
 
                 <div class="portofolio__container container swiper">
                     <div class="swiper-wrapper">
@@ -655,7 +655,7 @@
                         </div><br>
 
                         <div>
-                            <a href="#" class="button button--flex">
+                            <a href="" class="button button--flex">
                                 Send Message
                                 <i class="uil uil-message button__icon"></i>
                             </a>
@@ -684,7 +684,7 @@
                         <li>
                             <a href="#portofolio" class="footer__link">Portfolio</a>
                         </li>
-                    </ul>
+                    </ul><br>
 
                     <div class="footers__socials">
                         <a href="https://www.linkedin.com/in/kalvin-belony-sagbo-16505b222/" class="footer__social">
