--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
                             <h1 class="home__title">👋 Hello,world !</h1><br>
                             <h3 class="home__subtitle">Front-end développeur</h3>
                             <p class="home__description">Mon nom est Kalvin. Je suis un développeur junior front-end
-                            basé sur Paris. Je suis tombé
-                            amoureux du développement web en 2020
-                            et j'ai décidé d'en faire mon métier.
+                            basé sur Paris. Passioné de code j'ai décidé d'en apprendre plus sur le dévellopement web et d'en faire mon métier.
                             </p>
                             <a href="#contact" class="button button--flex">
                                 Contactez-moi<i class="uil uil-message button__icon"></i>
@@ -164,7 +162,7 @@
             <!--==================== SKILLS ====================-->
             <section class="skills-section" id="competences">
                 <h2 class="section__title">Compétences</h2>
-                <span class="section__subtitle">Mes compétences techniques</span>
+                <span class="section__subtitle">Mes languages appris</span>
 
                 <div class="skills__container container grid">
                     <div>
@@ -174,7 +172,7 @@
                                 <i class="uil uil-brackets-curly skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__title">Front-end développement</h1>
+                                    <h1 class="skills__title">Front-end </h1>
                                 </div>
 
                                 <i class="uil uil-angle-down skills__arrows"></i>
@@ -210,9 +208,10 @@
                         <div class="skills__content skills__close">
                             <div class="skills__header">
                                 <i class="uil uil-server-network skills__icon"></i>
+                            
 
                                 <div>
-                                    <h1 class="skills__title">Back-end développement</h1>
+                                    <h1 class="skills__title">Back-end</h1>
                                 </div>
 
                                 <i class="uil uil-angle-down skills__arrows"></i>
@@ -221,9 +220,20 @@
                             <div class="skills__list grid">
                                 <div class="skills__data">
                                     <div class="skills__titles">
-                                        <h3 class="skills__name">PHP 8 / POO</h3>
+                                        <h3 class="skills__name">PHP / POO</h3>
                                     </div><br>
                                 </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">C</h3>
+                                    </div><br>
+
+
+                                <div class="skills__data">
+                                        <div class="skills__titles">
+                                            <h3 class="skills__name">Firebase</h3>
+                                        </div><br>
 
                                 <div class="skills__data">
                                     <div class="skills__titles">
@@ -241,6 +251,8 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div></div></div>
                             </div>
                         </div><br>
                         <!--==================== SKILLS 3 ====================-->
@@ -369,7 +381,7 @@
             <!--==================== SERVICES ====================-->
             <section class="services section" id="services">
                 <h2 class="section__title">Services</h2>
-                <span class="section__subtitle">What i offer</span>
+                <span class="section__subtitle">Compétence et services dont je dispose</span>
 
                 <div class="services__container container grid">
                     <!--==================== SERVICES 1 ====================-->
@@ -536,10 +548,10 @@
                     <div class="swiper-wrapper">
                         <!--==================== PORTFOLIO 1 ====================-->
                         <div class="portofolio__content grid swiper-slide">
-                            <img src="assets/img/Vivo-green.png"  alt="" class="portofolio__img">
+                            <img src="assets/img/DonkeyStay.png"  alt="" class="portofolio__img">
 
                             <div class="portofolio__data"><br>
-                                <h3 class="portofolio__title">Vivo-Green</h3>
+                                <h3 class="portofolio__title">DonkeyStay</h3>
                                 <p class="portofolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
                                 <a href="https://www.vivo-green.fr/" class="button button--flex button--small portofolio__button">
                                     Demo
@@ -550,10 +562,10 @@
 
                         <!--==================== PORTFOLIO 2 ====================-->
                         <div class="portofolio__content grid swiper-slide">
-                            <img src="assets/img/DonkeyStay.png" alt="" class="portofolio__img">
+                            <img src="assets/img/Immo'invest.jpg" alt="" class="portofolio__img">
 
                             <div class="portofolio__data"><br>
-                                <h3 class="portofolio__title">Vivo-Green</h3>
+                                <h3 class="portofolio__title">Invest'Immo</h3>
                                 <p class="portofolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
                                 <a href="#" class="button button--flex button--small portofolio__button">
                                     Demo
@@ -564,10 +576,10 @@
 
                         <!--==================== PORTFOLIO 3 ====================-->
                         <div class="portofolio__content grid swiper-slide">
-                            <img src="assets/img/Pokedex.png" alt="" class="portofolio__img">
+                            <img src="assets/img/Vivo-green.png" alt="" class="portofolio__img">
 
                             <div class="portofolio__data"><br>
-                                <h3 class="portofolio__title">Vivo-Green</h3>
+                                <h3 class="portofolio__title">Vivo Green</h3>
                                 <p class="portofolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
                                 <a href="#" class="button button--flex button--small portofolio__button">
                                     Demo
@@ -578,10 +590,25 @@
 
                         <!--==================== PORTFOLIO 4 ====================-->
                         <div class="portofolio__content grid swiper-slide">
+                            <img src="assets/img/Pokedex.png" alt="" class="portofolio__img">
+
+                            <div class="portofolio__data"><br>
+                                <h3 class="portofolio__title">Pokédex</h3>
+                                <p class="portofolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
+                                <a href="#" class="button button--flex button--small portofolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div><br>
+
+
+                        <!--==================== PORTFOLIO 5 ====================-->
+                        <div class="portofolio__content grid swiper-slide">
                             <img src="assets/img/Blog.png" alt="" class="portofolio__img">
 
                             <div class="portofolio__data"><br>
-                                <h3 class="portofolio__title">Vivo-Green</h3>
+                                <h3 class="portofolio__title">Mon blog</h3>
                                 <p class="portofolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
                                 <a href="#" class="button button--flex button--small portofolio__button">
                                     Demo
@@ -616,8 +643,8 @@
                             <i class="uil uil-phone contact__icon"></i>
 
                             <div>
-                                <h3 class="contact__title">Call me</h3>
-                                <span class="contact__subtitle">+33 631906435</span>
+                                <h3 class="contact__title">Numéro</h3>
+                                <span class="contact__subtitle" a href="tel:+33631906435">+33631906435</a></span>
                             </div>
                         </div>
                         <div class="contact__information">
@@ -625,7 +652,7 @@
 
                             <div>
                                 <h3 class="contact__title">Email</h3>
-                                <span class="contact__subtitle">kalvin.sgb@outlook.com</span>
+                                <span class="contact__subtitle" a href="kalvin.sgb@outlook.com">kalvin.sgb@outlook.com</a></span>
                             </div>
                         </div>
                         <div class="contact__information">
@@ -633,7 +660,7 @@
 
                             <div>
                                 <h3 class="contact__title">Localisation</h3>
-                                <span class="contact__subtitle">Paris</span>
+                                <span class="contact__subtitle">Nogent-Sur-Marne, 94130</span>
                             </div>
                         </div>
                     </div>
@@ -641,7 +668,7 @@
                     <form action="" class="contact__form grid">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
-                                <label for="" class="contact__label">Name</label>
+                                <label for="" class="contact__label">Nom</label>
                                 <input type="text" class="contact__input">
                             </div><br>
                             <div class="contact__content">
@@ -656,7 +683,7 @@
 
                         <div>
                             <a href="" class="button button--flex">
-                                Send Message
+                                Envoyer un message
                                 <i class="uil uil-message button__icon"></i>
                             </a>
                         </div>
