--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <h1 class="home__title">👋 Hello,world !</h1><br>
                             <h3 class="home__subtitle">Front-end développeur</h3>
                             <p class="home__description">Mon nom est Kalvin. Je suis un développeur junior front-end
-                            basé sur Paris. Passioné de code j'ai décidé d'en apprendre plus sur le dévellopement web et d'en faire mon métier.
+                            basé sur Paris. Passioné de code j'ai décidé d'en apprendre plus sur le développement web et d'en faire mon futur métier.
                             </p>
                             <a href="#contact" class="button button--flex">
                                 Contactez-moi<i class="uil uil-message button__icon"></i>
@@ -118,7 +118,7 @@
                     </div>
 
                     <div class="home__scroll">
-                        <a href="#about" class="home__scroll-button button--flex">
+                        <a href="#competences" class="home__scroll-button button--flex">
                             <i class="uil uil-mouse home__scroll-mouse"></i>
                             <span class="home__scroll-name">Scroll</span>
                             <i class="uil uil-arrow-down home__scroll-arrow"></i>
@@ -162,7 +162,7 @@
             <!--==================== SKILLS ====================-->
             <section class="skills-section" id="competences">
                 <h2 class="section__title">Compétences</h2>
-                <span class="section__subtitle">Mes languages appris</span>
+                <span class="section__subtitle">Mes languages et outils</span>
 
                 <div class="skills__container container grid">
                     <div>
@@ -244,12 +244,6 @@
                                         <div class="skills__titles">
                                             <h3 class="skills__name">Firebase</h3>
                                         </div><br>
-
-                                    <div class="skills__data">
-                                        <div class="skills__titles">
-                                            <h3 class="skills__name">Symfony</h3>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div></div></div>
@@ -286,12 +280,39 @@
                                 </div>
                             </div>
                         </div><br>
-                    </div>
+                    </div><br>
+                    <!--==================== SKILLS 3 ====================-->
+                    <div class="skills__content skills__close">
+                        <div class="skills__header">
+                            <i class="uil uil-jackhammer skills__icon"></i>
+
+                            <div>
+                                <h1 class="skills__title">Framework</h1>
+                            </div>
+
+                            <i class="uil uil-angle-down skills__arrows"></i>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Angular</h3>
+                                </div>
+                            </div><br>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Symfony</h3>
+                                </div><br>
+
+                        </div>
+                    </div><br>
+                </div>
                 </div>
             </section>
 
             <!--==================== QUALIFICATION ====================-->
-            <section class="qualification section" id="services">
+            <section class="qualification section" id="qualification">
                 <h2 class="section__title">Qualification</h2>
                 <span class="section__subtitle">Mon parcours</span>
 
@@ -442,20 +463,16 @@
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>I develop the user interface.</p>
+                                        <p>Adaptation des pages web en cohérence avec les maquettes</p>
                                     </li><br>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>Web page development.</p>
+                                        <p>Correction d'éventuels bug d’affichage du site</p>
                                     </li><br>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>I create ux element interactions.</p>
+                                        <p>Création d'un site responsive et adaptable</p>
                                     </li><br>
-                                    <li class="services__modal-service">
-                                        <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>I position your company brand.</p>
-                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -548,12 +565,12 @@
                     <div class="swiper-wrapper">
                         <!--==================== PORTFOLIO 1 ====================-->
                         <div class="portofolio__content grid swiper-slide">
-                            <img src="assets/img/DonkeyStay.png"  alt="" class="portofolio__img">
+                            <img src="assets/img/DonkeyStay.jpeg"  alt="" class="portofolio__img">
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">DonkeyStay</h3>
                                 <p class="portofolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
-                                <a href="https://www.vivo-green.fr/" class="button button--flex button--small portofolio__button">
+                                <a href="#" class="button button--flex button--small portofolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -562,7 +579,7 @@
 
                         <!--==================== PORTFOLIO 2 ====================-->
                         <div class="portofolio__content grid swiper-slide">
-                            <img src="assets/img/Immo'invest.jpg" alt="" class="portofolio__img">
+                            <img src="assets/img/Immo'invest.png" alt="" class="portofolio__img">
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Invest'Immo</h3>
@@ -581,7 +598,7 @@
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Vivo Green</h3>
                                 <p class="portofolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
-                                <a href="#" class="button button--flex button--small portofolio__button">
+                                <a href="https://www.vivo-green.fr/" class="button button--flex button--small portofolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
