--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>Kalvin Belony--Sagbo</title>
+        <link rel="shortcut icon" type="image/png" href="/assets/img/favicon.png">
     </head>
         <!--==================== HEADER ====================-->
         <header class="header" id="header">
@@ -107,9 +108,9 @@
 
                         <div class="home__data">
                             <h1 class="home__title">👋 Hello,world !</h1><br>
-                            <h3 class="home__subtitle">Front-end développeur</h3>
-                            <p class="home__description">Mon nom est Kalvin. Je suis un développeur junior front-end
-                            basé sur Paris. Passioné de code j'ai décidé d'en apprendre plus sur le développement web et d'en faire mon futur métier.
+                            <h3 class="home__subtitle">Developpeur web Front-end</h3>
+                            <p class="home__description">Mon nom est Kalvin. Je suis un développeur junior
+                            basé sur Paris. Passioné de code j'ai décidé d'en apprendre plus sur le développement web en rejoignant la DonkeySchool et d'en faire mon métier.
                             </p>
                             <a href="#contact" class="button button--flex">
                                 Contactez-moi<i class="uil uil-message button__icon"></i>
@@ -133,8 +134,8 @@
                 <span class="section__subtitle">Mon introduction</span>
                 <div class="about__container container grid">
                     <div class="about__data">
-                        <p class="about__description">Je souhaite devenir quelqu'un qui contribue à la société, qui influence la vie de nombreuses personnes et qui soit présent pour ceux dont je suis proche.<br><br>
-                        D'une certaine manière, je travaille déjà à la réalisation de cet objectif idéaliste. J'aime à penser que les nombreuses relations que j'ai nouées au cours des 19 années de ma vie m'ont permis d'apprendre des autres autant que les autres ont appris de moi. Beaucoup m'ont connu comme quelqu'un d'amical, de fiable et de responsable
+                        <p class="about__description">Je souhaite devenir quelqu'un qui contribue à la conception de site et d'application web, qui influence la vie de nombreuses personnes.<br><br>
+                        En tant que développeur front-end, j'apprécie énormément la capacité à donner vie à la vision d'un client, ce qui est très gratifiant. J'éprouve une énorme satisfaction à voir un travail passer de l'idée à la conception, surtout lorsqu'il apparaît dans les mains de l'utilisateur.
                         </p>
                         <br>
                         <div class="about__info">
@@ -529,13 +530,13 @@
 
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">SQL</h4>
+                                <h4 class="services__modal-title">BDD</h4>
                                 <i class="uil uil-times services__modal-close"></i>
 
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>I develop the user interface.</p>
+                                        <p>Création </p>
                                     </li><br>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
@@ -569,7 +570,7 @@
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">DonkeyStay</h3>
-                                <p class="portofolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
+                                <p class="portofolio__description">Réalisation en PHP d’un site de location d'hébergement. Identité visuelle.Equipe de 3 développeurs en méthode Agile. Site réalisé en 3 semaines.</p>
                                 <a href="#" class="button button--flex button--small portofolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
@@ -583,7 +584,7 @@
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Invest'Immo</h3>
-                                <p class="portofolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
+                                <p class="portofolio__description">Application web avec algorithme de calcul de rentabilité locative, scraping de data, paiement Stripe. UI/UX Design sur Figma.Equipe de 5 développeurs sur Angular & Symfony en méthode Agile durant 2 mois.</p>
                                 <a href="#" class="button button--flex button--small portofolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
@@ -597,7 +598,7 @@
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Vivo Green</h3>
-                                <p class="portofolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
+                                <p class="portofolio__description">Réalisation en Wordpress pour le lancement d’un site de décarbonitation. Identité visuelle,retour avec le client. Equipe de 2 développeurs. Site réalisé en 2 semaines.</p>
                                 <a href="https://www.vivo-green.fr/" class="button button--flex button--small portofolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
@@ -611,7 +612,7 @@
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Pokédex</h3>
-                                <p class="portofolio__description">Website adaptable to all devices, with ui components and animated interactions.</p>
+                                <p class="portofolio__description">Réalisation en Angular d’un Pokédex. Identité visuelle,utilisation d’API.Site réalisé en 2 semaines.</p>
                                 <a href="#" class="button button--flex button--small portofolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
