right cv + orthographe

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             <h1 class="home__title">👋 Hello,world !</h1><br>
                             <h3 class="home__subtitle">Developpeur web Front-end</h3>
                             <p class="home__description">Mon nom est Kalvin. Je suis un développeur junior
-                            basé sur Paris. Passioné de code j'ai décidé d'en apprendre plus sur le développement web en rejoignant la DonkeySchool et d'en faire mon métier.
+                                basé sur Paris. Passionné de code,j'ai décidé d'en apprendre plus sur le développement web en rejoignant la DonkeySchool et d'en faire mon métier.
                             </p>
                             <a href="#contact" class="button button--flex">
                                 Contactez-moi<i class="uil uil-message button__icon"></i>
@@ -570,8 +570,8 @@
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">DonkeyStay</h3>
-                                <p class="portofolio__description">Réalisation en PHP d’un site de location d'hébergement. Identité visuelle.Equipe de 3 développeurs en méthode Agile. Site réalisé en 3 semaines.</p>
-                                <a href="#" class="button button--flex button--small portofolio__button">
+                                <p class="portofolio__description">Réalisation en PHP d’un site de location d'hébergement. Identité visuelle. Équipe de 3 développeurs en méthode Agile. Site réalisé en 3 semaines.</p>
+                                <a href="https://github.com/Kbelony/Projet-stay" class="button button--flex button--small portofolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -584,7 +584,7 @@
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Invest'Immo</h3>
-                                <p class="portofolio__description">Application web avec algorithme de calcul de rentabilité locative, scraping de data, paiement Stripe. UI/UX Design sur Figma.Equipe de 5 développeurs sur Angular & Symfony en méthode Agile durant 2 mois.</p>
+                                <p class="portofolio__description">Application web avec algorithme de calcul de rentabilité locative, scraping de data, paiement Stripe. UI/UX Design sur Figma. Équipe de 5 développeurs sur Angular & Symfony en méthode Agile durant 2 mois.</p>
                                 <a href="#" class="button button--flex button--small portofolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
@@ -598,7 +598,7 @@
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Vivo Green</h3>
-                                <p class="portofolio__description">Réalisation en Wordpress pour le lancement d’un site de décarbonitation. Identité visuelle,retour avec le client. Equipe de 2 développeurs. Site réalisé en 2 semaines.</p>
+                                <p class="portofolio__description">Réalisation en Wordpress pour le lancement d’un site de décarbonatation. Identité visuelle, retour avec le client. Équipe de 2 développeurs. Site réalisé en 2 semaines.</p>
                                 <a href="https://www.vivo-green.fr/" class="button button--flex button--small portofolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
@@ -612,7 +612,7 @@
 
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Pokédex</h3>
-                                <p class="portofolio__description">Réalisation en Angular d’un Pokédex. Identité visuelle,utilisation d’API.Site réalisé en 2 semaines.</p>
+                                <p class="portofolio__description">Réalisation en Angular d’un Pokédex. Identité visuelle, utilisation d’API. Site réalisé en 2 semaines.</p>
                                 <a href="#" class="button button--flex button--small portofolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
